--- a/URY.BAPS.Client.Wpf/MainWindow.xaml
+++ b/URY.BAPS.Client.Wpf/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:sys="clr-namespace:System;assembly=mscorlib"
         xmlns:controls="clr-namespace:URY.BAPS.Client.Wpf.Controls"
-        xmlns:fa="http://schemas.fontawesome.io/icons/"
+        xmlns:fa5="http://schemas.fontawesome.com/icons/"
         mc:Ignorable="d"
         Title="BAPS Presenter" Height="768" Width="1024">
     <Window.Resources>
@@ -49,7 +49,7 @@
             </TextBlock>
             <Button Width="96px" Margin="4px">
                 <TextBlock TextAlignment="Center">
-                    <fa:ImageAwesome Icon="Download" Margin="4px" Width="32px" />
+                    <fa5:SvgAwesome Icon="Solid_ArrowDown" Margin="4px" Height="32px" />
                     <LineBreak />
                     Load Show
                 </TextBlock>
@@ -64,7 +64,7 @@
             <TabItem>
                 <TabItem.Header>
                     <TextBlock>
-                        <fa:ImageAwesome Icon="FileSoundOutline" Width="16px" /> Sound Folders
+                        <fa5:SvgAwesome Icon="Regular_FileAudio" Width="16px" Height="16px" /> Sound Folders
                     </TextBlock>
                 </TabItem.Header>
                 <ListView
@@ -86,7 +86,7 @@
             <TabItem>
                 <TabItem.Header>
                     <TextBlock>
-                        <fa:ImageAwesome Icon="Music" Width="16px" /> Track Library
+                        <fa5:SvgAwesome Icon="Solid_Music" Width="16px" Height="16px" /> Track Library
                     </TextBlock>
                 </TabItem.Header>
             </TabItem>
