--- a/URY.BAPS.Client.Wpf/Controls/Channel.xaml
+++ b/URY.BAPS.Client.Wpf/Controls/Channel.xaml
@@ -8,39 +8,34 @@ The main channel control.
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
              xmlns:fa="http://schemas.fontawesome.io/icons/"
+             xmlns:model="clr-namespace:URY.BAPS.Common.Model;assembly=URY.BAPS.Common.Model"
              xmlns:controls="clr-namespace:URY.BAPS.Client.Wpf.Controls"
              xmlns:designData="clr-namespace:URY.BAPS.Client.Wpf.DesignData"
              xmlns:behaviors="clr-namespace:URY.BAPS.Client.Wpf.Behaviors"
              xmlns:playback="clr-namespace:URY.BAPS.Common.Model.Playback;assembly=URY.BAPS.Common.Model"
              xmlns:fa5="http://schemas.fontawesome.com/icons/"
+             xmlns:calcBinding="clr-namespace:CalcBinding;assembly=CalcBinding"
              mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800" MinWidth="360"
              d:DataContext="{d:DesignInstance designData:MockChannelViewModel, IsDesignTimeCreatable=True}">
     <UserControl.Resources>
-        <Thickness x:Key="ChannelBarMargin">6px</Thickness>
-        <!-- ChannelBarHeight - (2*ChannelBarMargin) -->
-        <sys:Double x:Key="ChannelBarHeightMinusMargin">20</sys:Double>
-        <!-- Tango colours (for now) -->
-        <SolidColorBrush x:Key="ChannelLegendLampOut" Color="#FF888a85" />
-        <SolidColorBrush x:Key="ChannelLegendLampOn" Color="#FFEEEEEC" />
-        <SolidColorBrush x:Key="ChannelLegendLampAlt" Color="#FFEF2929" />
-        <!-- Styles -->
-        <Style x:Key="ChannelLampStyle" TargetType="{x:Type fa5:SvgAwesome}">
-            <Setter Property="Height" Value="{StaticResource ChannelBarHeightMinusMargin}" />
-            <Setter Property="Width" Value="{StaticResource ChannelBarHeightMinusMargin}" />
-            <Setter Property="Margin" Value="{StaticResource ChannelBarMargin}" />
-            <Setter Property="Foreground" Value="{StaticResource ChannelLegendLampOut}" />
-        </Style>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Channel.Resources.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </UserControl.Resources>
     <DockPanel>
         <controls:Header
             DockPanel.Dock="Top"
-            Icon="Solid_Music"
+            Icon="Solid_HeadphonesAlt"
             Text="{Binding Name}">
             <StackPanel Orientation="Horizontal" FlowDirection="RightToLeft">
-                <Button behaviors:ContextMenuLeftClickBehavior.IsLeftClickEnabled="True">
+                <Button Width="{StaticResource ChannelBarHeight}"
+                        ToolTip="Channel settings"
+                        behaviors:ContextMenuLeftClickBehavior.IsLeftClickEnabled="True">
                     <Button.Content>
-                        <fa5:SvgAwesome Margin="{StaticResource ChannelBarMargin}" Icon="Solid_Bars" />
+                        <fa5:SvgAwesome Margin="{StaticResource ChannelBarMargin}" Icon="Solid_Cog" />
                     </Button.Content>
                     <Button.ContextMenu>
                         <ContextMenu FlowDirection="LeftToRight">
@@ -75,47 +70,22 @@ The main channel control.
                         </ContextMenu>
                     </Button.ContextMenu>
                 </Button>
-                <fa5:SvgAwesome Icon="Solid_Redo" ToolTip="Repeat mode">
-                    <fa5:SvgAwesome.Style>
-                        <Style TargetType="{x:Type fa5:SvgAwesome}"
-                               BasedOn="{StaticResource ChannelLampStyle}">
-                            <Style.Triggers>
-                                <DataTrigger Binding="{Binding Path=RepeatMode}" Value="All">
-                                    <Setter Property="Foreground" Value="{StaticResource ChannelLegendLampAlt}" />
-                                </DataTrigger>
-                                <DataTrigger Binding="{Binding Path=RepeatMode}" Value="One">
-                                    <Setter Property="Foreground" Value="{StaticResource ChannelLegendLampOn}" />
-                                </DataTrigger>
-                            </Style.Triggers>
-                        </Style>
-                    </fa5:SvgAwesome.Style>
-                </fa5:SvgAwesome>
-                <fa5:SvgAwesome Icon="Solid_AngleDoubleDown" ToolTip="Auto Advance">
-                    <fa5:SvgAwesome.Style>
-                        <Style TargetType="{x:Type fa5:SvgAwesome}"
-                               BasedOn="{StaticResource ChannelLampStyle}">
-                            <Style.Triggers>
-                                <DataTrigger Binding="{Binding Path=IsAutoAdvance}" Value="true">
-                                    <Setter Property="Foreground" Value="{StaticResource ChannelLegendLampOn}" />
-                                </DataTrigger>
-                            </Style.Triggers>
-                        </Style>
-                    </fa5:SvgAwesome.Style>
-                </fa5:SvgAwesome>
-                <fa5:SvgAwesome
+                <controls:ChannelSettingLamp
+                    Icon="Solid_RedoAlt"
+                    ToolTip="Repeat mode"
+                    IsHighlighted="{calcBinding:Binding '!IsRepeatNone'}"
+                    AlternativeMode="{Binding IsRepeatAll}"
+                />
+                <controls:ChannelSettingLamp
+                    Icon="Regular_ArrowAltCircleDown"
+                    ToolTip="Auto Advance"
+                    IsHighlighted="{Binding Path=IsAutoAdvance}"
+                />
+                <controls:ChannelSettingLamp
                     Icon="Regular_PlayCircle"
-                    ToolTip="Play on load">
-                    <fa5:SvgAwesome.Style>
-                        <Style TargetType="{x:Type fa5:SvgAwesome}"
-                               BasedOn="{StaticResource ChannelLampStyle}">
-                            <Style.Triggers>
-                                <DataTrigger Binding="{Binding Path=IsPlayOnLoad}" Value="true">
-                                    <Setter Property="Foreground" Value="{StaticResource ChannelLegendLampOn}" />
-                                </DataTrigger>
-                            </Style.Triggers>
-                        </Style>
-                    </fa5:SvgAwesome.Style>
-                </fa5:SvgAwesome>
+                    ToolTip="Play on load"
+                    IsHighlighted="{Binding Path=IsPlayOnLoad}"
+                />
             </StackPanel>
         </controls:Header>
         <controls:Player DockPanel.Dock="Bottom" DataContext="{Binding Player}" />
