--- a/URY.BAPS.Client.Wpf/App.xaml
+++ b/URY.BAPS.Client.Wpf/App.xaml
@@ -4,8 +4,9 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:viewModel="clr-namespace:URY.BAPS.Client.Wpf.ViewModel"
              xmlns:converters="clr-namespace:URY.BAPS.Client.Wpf.Converters"
-             xmlns:fa="http://schemas.fontawesome.io/icons/"
              xmlns:fa5="http://schemas.fontawesome.com/icons/"
+             xmlns:ap="clr-namespace:URY.BAPS.Client.Wpf.Controls"
+             xmlns:system="clr-namespace:System;assembly=System.Runtime"
              x:Class="URY.BAPS.Client.Wpf.App"
              Startup="Application_Startup"
              Exit="Application_Exit" mc:Ignorable="d">
@@ -15,6 +16,14 @@
 
             <converters:TrackToIconConverter x:Key="EntryTypeToIconConverter" />
 
+
+            <!--
+            Margin thickness used for header button icons.
+            -->
+            <Thickness x:Key="HeaderButtonIconMargin">2px</Thickness>
+            <system:Double x:Key="HeaderButtonHeight">28</system:Double>
+            <system:Double x:Key="HeaderButtonIconHeight">24</system:Double>
+
             <!-- Colours used throughout BAPS -->
             <SolidColorBrush x:Key="MainBg" Color="#FF002D5A" />
             <SolidColorBrush x:Key="MainFg" Color="White" />
@@ -23,6 +32,25 @@
             <SolidColorBrush x:Key="AccentFg" Color="White" />
 
             <SolidColorBrush x:Key="SideBg" Color="#FFE1E1E1" />
+
+            <!-- Style used for header buttons. -->
+            <Style x:Key="HeaderButton" TargetType="Button">
+                <Setter Property="MinWidth" Value="{StaticResource HeaderButtonHeight}"/>
+                <Setter Property="Height" Value="{StaticResource HeaderButtonHeight}"/>
+                <Setter Property="Margin" Value="2 0"/>
+                <Setter Property="ContentTemplate">
+                    <Setter.Value>
+                        <DataTemplate>
+                            <StackPanel Orientation="Horizontal">
+                                <fa5:FontAwesome VerticalAlignment="Center"
+                                                 FontSize="{StaticResource HeaderButtonIconHeight}" LineHeight="{StaticResource HeaderButtonIconHeight}"
+                                                 Icon="{Binding Path=(ap:ButtonProperties.Icon), RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Button}}}"/>
+                                <ContentPresenter Content="{Binding Path=Content, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Button}}}"></ContentPresenter>
+                            </StackPanel>
+                        </DataTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
 
             <!-- Template used for tracks in track lists and audio walls. -->
             <DataTemplate x:Key="TrackTemplate" DataType="{x:Type viewModel:TrackViewModel}">
