--- a/URY.BAPS.Client.Wpf/Controls/Channel.xaml
+++ b/URY.BAPS.Client.Wpf/Controls/Channel.xaml
@@ -6,37 +6,24 @@ The main channel control.
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:sys="clr-namespace:System;assembly=mscorlib"
-             xmlns:fa="http://schemas.fontawesome.io/icons/"
-             xmlns:model="clr-namespace:URY.BAPS.Common.Model;assembly=URY.BAPS.Common.Model"
              xmlns:controls="clr-namespace:URY.BAPS.Client.Wpf.Controls"
              xmlns:designData="clr-namespace:URY.BAPS.Client.Wpf.DesignData"
              xmlns:behaviors="clr-namespace:URY.BAPS.Client.Wpf.Behaviors"
              xmlns:playback="clr-namespace:URY.BAPS.Common.Model.Playback;assembly=URY.BAPS.Common.Model"
-             xmlns:fa5="http://schemas.fontawesome.com/icons/"
              xmlns:calcBinding="clr-namespace:CalcBinding;assembly=CalcBinding"
              mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800" MinWidth="360"
              d:DataContext="{d:DesignInstance designData:MockChannelViewModel, IsDesignTimeCreatable=True}">
-    <UserControl.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Channel.Resources.xaml" />
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
-    </UserControl.Resources>
     <DockPanel>
         <controls:Header
             DockPanel.Dock="Top"
             Icon="Solid_HeadphonesAlt"
             Text="{Binding Name}">
             <StackPanel Orientation="Horizontal" FlowDirection="RightToLeft">
-                <Button Width="{StaticResource ChannelBarHeight}"
+                <Button Style="{StaticResource HeaderButton}"
+                        controls:ButtonProperties.Icon="Solid_Cog"
                         ToolTip="Channel settings"
                         behaviors:ContextMenuLeftClickBehavior.IsLeftClickEnabled="True">
-                    <Button.Content>
-                        <fa5:SvgAwesome Margin="{StaticResource ChannelBarMargin}" Icon="Solid_Cog" />
-                    </Button.Content>
                     <Button.ContextMenu>
                         <ContextMenu FlowDirection="LeftToRight">
                             <MenuItem
