--- a/URY.BAPS.Client.Wpf/Controls/TrackBar.xaml
+++ b/URY.BAPS.Client.Wpf/Controls/TrackBar.xaml
@@ -5,9 +5,10 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:c="clr-namespace:CalcBinding;assembly=CalcBinding"
     xmlns:converters="clr-namespace:URY.BAPS.Client.Wpf.Converters"
-    xmlns:designData="clr-namespace:URY.BAPS.Client.Wpf.DesignData"
     xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-    xmlns:mvvm="http://www.galasoft.ch/mvvmlight" x:Class="URY.BAPS.Client.Wpf.Controls.TrackBar"
+    xmlns:mvvm="http://www.galasoft.ch/mvvmlight"
+    xmlns:designData="clr-namespace:URY.BAPS.Client.ViewModel.DesignData;assembly=URY.BAPS.Client.ViewModel"
+    x:Class="URY.BAPS.Client.Wpf.Controls.TrackBar"
     mc:Ignorable="d"
     Height="72px" d:DesignWidth="800"
     d:DataContext="{d:DesignInstance {x:Type designData:MockPlayerViewModel}, IsDesignTimeCreatable=True}">
@@ -248,7 +249,7 @@
                 Width="{Binding ActualWidth, ElementName=Canvas}">
             <i:Interaction.Triggers>
                 <i:EventTrigger EventName="ValueChanged">
-                    <mvvm:EventToCommand Command="{Binding SetIntroCommand, Mode=OneWay}"
+                    <mvvm:EventToCommand Command="{Binding SetIntro, Mode=OneWay}"
                                          EventArgsConverter="{StaticResource SliderValueChangedEventArgsToUintConverter}"
                                          PassEventArgsToCommand="True"
                                          MustToggleIsEnabled="True" />
@@ -262,7 +263,7 @@
                 Width="{Binding ActualWidth, ElementName=Canvas}">
             <i:Interaction.Triggers>
                 <i:EventTrigger EventName="ValueChanged">
-                    <mvvm:EventToCommand Command="{Binding SetPositionCommand, Mode=OneWay}"
+                    <mvvm:EventToCommand Command="{Binding SetPosition, Mode=OneWay}"
                                          EventArgsConverter="{StaticResource SliderValueChangedEventArgsToUintConverter}"
                                          PassEventArgsToCommand="True"
                                          MustToggleIsEnabled="True" />
@@ -279,7 +280,7 @@
                 IsEnabled="{Binding HasLoadedAudioTrack}">
             <i:Interaction.Triggers>
                 <i:EventTrigger EventName="ValueChanged">
-                    <mvvm:EventToCommand Command="{Binding SetCueCommand, Mode=OneWay}"
+                    <mvvm:EventToCommand Command="{Binding SetCue, Mode=OneWay}"
                                          EventArgsConverter="{StaticResource SliderValueChangedEventArgsToUintConverter}"
                                          PassEventArgsToCommand="True"
                                          MustToggleIsEnabled="True" />
