Fix incorrect two-way Text binding
This still isn't working, like.

--- a/URY.BAPS.Client.Wpf/Controls/TextPanel.xaml
+++ b/URY.BAPS.Client.Wpf/Controls/TextPanel.xaml
@@ -39,6 +39,6 @@
                  FontSize="{calcBinding:Binding '12.0 * (FontScale / 100.0)', Mode=OneWay}"
                  TextWrapping="Wrap"
                  VerticalScrollBarVisibility="Auto"
-                 Text="{Binding Text, Mode=TwoWay}" />
+                 Text="{Binding Text, Mode=OneWay}" />
     </DockPanel>
 </UserControl>
